@@ -1,5 +1,7 @@
 
 5.2b1 -> 5.3a1
+    - jbj: js: stub-in requires/loadModule global methods.
+    - jbj: js: save the rpmjs interpreter pointer in rt private data.
     - jbj: add the Fedorable tag(s) for file digests.
     - jbj: reserve ~1K in  RPMSIGTAG_PADDING for now.
     - jbj: squirrel: capture stdout in an iob.
